@@ -154,4 +154,49 @@
     <module>ear</module>
     <module>crawler</module>
   </modules>
+
+    <build>
+        <plugins>
+            <!-- Compiler plugin enforces Java 1.6 compatibility and
+         activates annotation processors -->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${version.java}</source>
+                    <target>${version.java}</target>
+                </configuration>
+            </plugin>
+            <!-- The JBoss AS plugin deploys your ear to a local JBoss
+          AS container -->
+            <!-- Due to Maven's lack of intelligence with EARs we need
+           to configure the jboss-as maven plugin to skip deployment for all modules.
+           We then enable it specifically in the ear module. -->
+            <plugin>
+                <groupId>org.jboss.as.plugins</groupId>
+                <artifactId>jboss-as-maven-plugin</artifactId>
+                <version>7.1.1.Final</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=256m</argLine>
+                    <systemProperties>
+                        <property>
+                            <name>homeland.project.version</name>
+                            <value>${project.version}</value>
+                        </property>
+                    </systemProperties>
+                    <skipExec>true</skipExec>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
